--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.3.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>assignment2</groupId>
+	<groupId>demo</groupId>
 	<artifactId>yinka</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
